# ITMOGD_Algo_22

./: .gitmodules  CMakeLists.txt  README.md  save.sav
doc/: lab1.md  lab4.md
google_tests/: CMakeLists.txt  lab2_tests.cpp  lab3_tests.cpp
src/: CMakeLists.txt  dice.cpp  dice.hpp  dyn-array.hpp  quicksort.hpp  sumer-game.cpp  sumer-game.hpp
